_lib/networking/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ${GATEWAY_NAME}
  namespace: networking
spec:
  gatewayClassName: cilium
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: All
  - name: https
    protocol: HTTPS
    port: 443
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: wildcard-tls
        namespace: networking
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            ${GATEWAY_NAME}: "true"
  - name: http-redirect
    protocol: HTTP
    port: 8080
    allowedRoutes:
      namespaces:
        from: All
